sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:6: error: ';' expected but integer literal found.
  if (getNombreValeurs()) == 10 {
                             ^