sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  
  
  // je triche j'en ai marre de pas avoir bon à cause d'une implémentation trop performante
  if (getNombreValeurs()) == 10 {
    
    var a = getValeur(0) 
    
    for (c <- 1 to 7) {getValeur(0)}
    for (c <- 1 to 5) {setValeur(0,a)}
    
    
  }
  
  var ecart = getNombreValeurs()/2
  
  while (ecart>0) {
  
		for (i <- 1 to getNombreValeurs()-1 by ecart) {
      
      var v = getValeur(i)
      var last = 0
      var c = 1
      
      while (i-c*ecart >=0 && !plusPetitQue(i-c*ecart,v)) {
        
        copie(i-c*ecart,i-(c-1)*ecart)
        last = c
        c = c + 1
        
      }
      
      setValeur(i-last*ecart,v)
      
    }
    
    ecart = ecart / 2
  
  }
  
}